fix some html and css

--- a/about.html
+++ b/about.html
@@ -126,8 +126,8 @@
     <section class="address">
       <div class="content">
         <ul>
-          <li>● 門市位址：台中市北區XX路XX號的某一樓</li>
-          <li>● 連絡電話：04-2222-XXXX</li>
+          <li>● 門市位址：台中市北區XX路XX號的N樓</li>
+          <li>● 聯絡電話：04-2222-8133</li>
           <li>
             ● 營業時間
             <ul>
