--- a/article.html
+++ b/article.html
@@ -70,7 +70,7 @@
         </nav>
       </section>
     </header>
-    <!-- 文章 -->
+    <!-- 標題 -->
     <div class="title">
       <img src="./picture/news/zero two cover.png" alt="" />
       <h1>
@@ -78,7 +78,9 @@
         ProgriseKey後變身的模樣，可動ZERO-TWO隆重登場！
       </h1>
     </div>
+
     <section>
+      <!-- 內容 -->
       <div class="main">
         <p>
           由日本 BANDAI SPIRITS 公司收藏玩具事業部 TAMASHII NATIONS
@@ -89,7 +91,7 @@
         </p>
         <img src="./picture/news/SHF/zero-two-1.jpg" alt="" />
         <p>
-          劇中登場的假面騎士ZERO-TWO是男女主角飛電或人、伊絲運用飛電 ZERO-TWO
+          劇中登場的假面騎士ZERO-TWO是男女主角飛電或人、伊茲運用飛電 ZERO-TWO
           驅動器與 ZERO-TWO
           數據鑰匙變身而成的假面騎士，所有蝗蟲系統能力之集大成，不僅活用飛電金屬、量子技術使整體性能大幅提升，更與具備高度運算能力的人工智慧傑亞合而為一，除了能夠預測敵人所有可能的行動模式外，還能運用次元跳躍裝置同時對應所有行動。
         </p>
@@ -117,69 +119,87 @@
       </div>
       <!-- 其他文章 -->
       <div class="other">
-        <h1>其他消息</h1>
-        <div class="page">
-          <div class="num">1</div>
-          <h2>
-            TAMASHII Features 2023 in TAIWAN】豐富的新品展示、限定的商品情報
-            近四百件展品...
-          </h2>
-        </div>
-        <div class="page">
-          <div class="num">2</div>
-          <h2>
-            一番賞 七龍珠 激突!!賭上宇宙的戰鬥」魔王達普拉、賽亞超人 09
-            月大魄力開抽！
-          </h2>
-        </div>
-        <div class="page">
-          <div class="num">3</div>
-          <h2>
-            大獎是大師之劍燈飾！一番賞『薩爾達傳說 王國之淚』全獎項公開
-            遊戲發售前搶先開抽
-          </h2>
-        </div>
-        <div class="page">
-          <div class="num">4</div>
-          <h2>
-            回憶殺第二彈！一番賞「Emotional Stories
-            2」童年娜美、喬巴&西爾爾克經典場景重現
-          </h2>
-        </div>
-        <div class="page">
-          <div class="num">5</div>
-          <h2>
-            T-ARTS《寶可夢》場景收藏 帕底亞地區篇轉蛋 小小御三家的激鬥上演！
-          </h2>
-        </div>
-        <div class="page">
-          <div class="num">6</div>
-          <h2>
-            大獎是 32 公分圓滾滾卡比！一番賞『星之卡比 噗噗噗風新生活☆』即將於
-            04 月 22 日發售
-          </h2>
-        </div>
-        <div class="page">
-          <div class="num">7</div>
-          <h2>
-            Panasonic Battery
-            ✕《機動戰士鋼彈》聯名活動！買滿額就送聯名野餐墊、工具箱～
-          </h2>
-        </div>
-        <div class="page">
-          <div class="num">8</div>
-          <h2>
-            《寶可夢》大型展覽「Pokémon Spring Festa
-            2023」首次坐落韓國與「小智與皮卡丘」再度見面
-          </h2>
-        </div>
-        <div class="much">
-          <a href="./news.html">更多文章></a>
+        <div class="list">
+          <h1>其他消息</h1>
+          <div class="page">
+            <div class="num">1</div>
+            <div class="art-title">
+              <h2>
+                TAMASHII Features 2023 in TAIWAN】豐富的新品展示、限定的商品情報
+                近四百件展品...
+              </h2>
+            </div>
+          </div>
+          <div class="page">
+            <div class="num">2</div>
+            <div class="art-title">
+              <h2>
+                一番賞 七龍珠 激突!!賭上宇宙的戰鬥」魔王達普拉、賽亞超人 09
+                月大魄力開抽！
+              </h2>
+            </div>
+          </div>
+          <div class="page">
+            <div class="num">3</div>
+            <div class="art-title">
+              <h2>
+                大獎是大師之劍燈飾！一番賞『薩爾達傳說 王國之淚』全獎項公開
+                遊戲發售前搶先登場
+              </h2>
+            </div>
+          </div>
+          <div class="page">
+            <div class="num">4</div>
+            <div class="art-title">
+              <h2>
+                回憶殺第二彈！一番賞「Emotional Stories
+                2」童年娜美、喬巴&西爾爾克經典場景重現
+              </h2>
+            </div>
+          </div>
+          <div class="page">
+            <div class="num">5</div>
+            <div class="art-title">
+              <h2>
+                T-ARTS《寶可夢》場景收藏 帕底亞地區篇轉蛋 小小御三家的激鬥上演！
+              </h2>
+            </div>
+          </div>
+          <div class="page">
+            <div class="num">6</div>
+            <div class="art-title">
+              <h2>
+                大獎是 32 公分圓滾滾卡比！一番賞『星之卡比
+                噗噗噗風新生活☆』即將於 04 月 22 日發售
+              </h2>
+            </div>
+          </div>
+          <div class="page">
+            <div class="num">7</div>
+            <div class="art-title">
+              <h2>
+                Panasonic Battery
+                ✕《機動戰士鋼彈》聯名活動！買滿額就送聯名野餐墊、工具箱～
+              </h2>
+            </div>
+          </div>
+          <div class="page">
+            <div class="num">8</div>
+            <div class="art-title">
+              <h2>
+                《寶可夢》大型展覽「Pokémon Spring Festa
+                2023」首次坐落韓國與「小智和皮卡丘」再度見面
+              </h2>
+            </div>
+          </div>
+          <div class="much">
+            <a href="./news.html">更多文章></a>
+          </div>
         </div>
       </div>
     </section>
     <div class="prev">
-      <a href="news.html" class="">返回前頁</a>
+      <a href="news.html" class="">返回最新消息</a>
     </div>
     <!-- 頁腳 -->
     <footer>
