--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
       <div class="QA-item">
         <div class="question">模型發售延期要到什麼時候呀，等了好久還沒拿到</div>
         <div class="ans">
-          發售延期都還是得以廠商公告為主 然而國外發貨/延期資訊僅供參考
+          發售延期都還是得以廠商公告為主 然而國外發貨及延期資訊僅供參考
         </div>
       </div>
       <div class="QA-item">
@@ -102,14 +102,12 @@
           終於拿到模型了！可是看起來好像有點瑕疵...該怎麼處理？
         </div>
         <div class="ans">
-          請務必「立即拍成影片留存」並私訊／發信給我們的客服幫忙確認狀況
+          請務必「立即拍成影片留存」聯絡給我們的客服幫忙確認狀況
         </div>
       </div>
       <div class="QA-item">
-        <div class="question">
-          若還有其他問題，可以填寫聯絡我們，我們會盡快回覆
-        </div>
-        <div class="ans">聯絡表單在下方呦</div>
+        <div class="question">若還有其他問題，該怎麼詢問你們？</div>
+        <div class="ans">可以填寫下方的聯絡表單，我們會盡快回覆</div>
       </div>
     </section>
 
@@ -152,12 +150,12 @@
 
         <div class="commit"><label for="">問題描述：</label></div>
         <div class="message">
-          <input type="textarea" style="width: 40vw; height: 10vw" />
+          <input type="textarea" class="my-commit" />
         </div>
 
         <div class="btn">
           <button style="background-color: gray">清除</button>
-          <button type="submit">提交</button>
+          <button type="submit">送出</button>
         </div>
       </form>
     </section>
