--- a/item.html
+++ b/item.html
@@ -114,13 +114,19 @@
             </div>
             <div class="other-pic">
               <div class="other-1">
-                <img src="./picture/single/carbee-1.jpg" alt="" />
+                <a href="#"
+                  ><img src="./picture/single/carbee-1.jpg" alt=""
+                /></a>
               </div>
               <div class="other-2">
-                <img src="./picture/single/carbee-2.jpg" alt="" />
+                <a href="#"
+                  ><img src="./picture/single/carbee-2.jpg" alt=""
+                /></a>
               </div>
               <div class="other-3">
-                <img src="./picture/single/carbee-3.jpg" alt="" />
+                <a href=""
+                  ><img src="./picture/single/carbee-3.jpg" alt="#"
+                /></a>
               </div>
             </div>
           </div>
@@ -174,7 +180,7 @@
       </div>
     </section>
     <div class="prev">
-      <a href="products.html">返回前頁</a>
+      <a href="products.html">返回所有商品</a>
     </div>
 
     <!-- 頁腳 -->
