--- a/news.html
+++ b/news.html
@@ -104,7 +104,7 @@
           <div class="content">
             <h2>
               《寶可夢》大型展覽「Pokémon Spring Festa
-              2023」首次坐落韓國與「小智與皮卡丘」再度見面
+              2023」首次坐落韓國與「小智和皮卡丘」再度見面
             </h2>
             <p>
               儘管《寶可夢》系列動畫已經來到了新的世代，開播7集的新作《寶可夢
@@ -148,7 +148,7 @@
           <div class="content">
             <h2>
               大獎是大師之劍燈飾！一番賞『薩爾達傳說 王國之淚』全獎項公開
-              遊戲發售前搶先開抽
+              遊戲發售前搶先登場
             </h2>
             <p>
               受到全球玩家矚目任天堂薩爾達系列最新作《薩爾達傳說
