--- a/index.html
+++ b/index.html
@@ -171,36 +171,44 @@
       <div class="items">
         <div class="cards">
           <div class="card">
-            <a href="#"
+            <a href="./item.html"
               ><img src="./picture/new-profuct/ironMan.png" alt=""
             /></a>
             <p>3月25日發售</p>
             <div class="newtag">NEW</div>
           </div>
           <div class="card">
-            <a href="#"><img src="./picture/new-profuct/sabo.png" alt="" /></a>
+            <a href="./item.html"
+              ><img src="./picture/new-profuct/sabo.png" alt=""
+            /></a>
             <p>3月25日發售</p>
             <div class="newtag">NEW</div>
           </div>
           <div class="card">
-            <a href="#"><img src="./picture/new-profuct/sugo.png" alt="" /></a>
+            <a href="./item.html"
+              ><img src="./picture/new-profuct/sugo.png" alt=""
+            /></a>
             <p>3月28日發售</p>
             <div class="newtag">NEW</div>
           </div>
         </div>
         <div class="cards">
           <div class="card">
-            <a href="#"><img src="./picture/new-profuct/uta.png" alt="" /></a>
+            <a href="./item.html"
+              ><img src="./picture/new-profuct/uta.png" alt=""
+            /></a>
             <p>3月28日發售</p>
             <div class="newtag">NEW</div>
           </div>
           <div class="card">
-            <a href="#"><img src="./picture/new-profuct/eva.png" alt="" /></a>
+            <a href="./item.html"
+              ><img src="./picture/new-profuct/eva.png" alt=""
+            /></a>
             <p>4月1日發售</p>
             <div class="newtag">NEW</div>
           </div>
           <div class="card">
-            <a href="#"
+            <a href="./item.html"
               ><img src="./picture/new-profuct/spider.png" alt=""
             /></a>
             <p>4月10日發售</p>
