add modal iframe window

--- a/article.html
+++ b/article.html
@@ -193,7 +193,7 @@
             </div>
           </div>
           <div class="much">
-            <a href="./news.html">更多文章></a>
+            <a href="./news.html">更多文章</a>
           </div>
         </div>
       </div>
