--- a/contact.html
+++ b/contact.html
@@ -149,9 +149,7 @@
         </div>
 
         <div class="commit"><label for="">問題描述：</label></div>
-        <div class="message">
-          <input type="textarea" class="my-commit" />
-        </div>
+        <textarea name="" id=""></textarea>
 
         <div class="btn">
           <button style="background-color: gray">清除</button>
