--- a/index.html
+++ b/index.html
@@ -88,32 +88,32 @@
         <div class="swiper-wrapper">
           <!-- Slides -->
 
-          <div class="swiper-slide">
-            <a target="_blank" href="https://youtu.be/ymVnEm4nGgQ"
+          <div class="swiper-slide" onclick="modal()">
+            <a target="" href="#"
               ><img src="./picture/video-cover/video-2.png" alt=""
             /></a>
           </div>
 
-          <div class="swiper-slide">
-            <a target="_blank" href="https://youtu.be/edZnUXuhVXc"
+          <div class="swiper-slide" onclick="modalSecond()">
+            <a target="" href="#"
               ><img src="./picture/video-cover/video-3.png" alt=""
             /></a>
           </div>
 
-          <div class="swiper-slide">
-            <a target="_blank" href="https://youtu.be/b91Qfs4lMQA"
+          <div class="swiper-slide" onclick="modalThird()">
+            <a target="" href="#"
               ><img src="./picture/video-cover/video-4.png" alt=""
             /></a>
           </div>
 
-          <div class="swiper-slide">
-            <a target="_blank" href="https://youtu.be/4UZ2wT9Nef4"
+          <div class="swiper-slide" onclick="modalFive()">
+            <a target="" href="#"
               ><img src="./picture/video-cover/video-5.png" alt=""
             /></a>
           </div>
 
-          <div class="swiper-slide">
-            <a target="_blank" href="https://youtu.be/yBBcbb97hNU"
+          <div class="swiper-slide" onclick="modalFour()">
+            <a target="" href="#"
               ><img src="./picture/video-cover/video-1.png" alt=""
             /></a>
           </div>
@@ -454,6 +454,71 @@
         </div>
       </div>
     </section>
+
+    <div class="film">
+      <button class="close-btn" onclick="closeBtn()">關閉</button>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/ymVnEm4nGgQ"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
+    </div>
+
+    <div class="film2">
+      <button class="close-btn" onclick="closeBtn2()">關閉</button>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/edZnUXuhVXc"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
+    </div>
+
+    <div class="film3">
+      <button class="close-btn" onclick="closeBtn3()">關閉</button>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/b91Qfs4lMQA"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
+    </div>
+
+    <div class="film4">
+      <button class="close-btn" onclick="closeBtn4()">關閉</button>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/yBBcbb97hNU"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
+    </div>
+
+    <div class="film5">
+      <button class="close-btn" onclick="closeBtn5()">關閉</button>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/4UZ2wT9Nef4"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
+    </div>
     <!-- 頁腳 -->
     <footer>
       <div class="footer-content">
