--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <!-- 導航列 -->
     <header>
-      <section>
+      <section class="logo">
         <a href="index.html"
           ><img class="logo" src="./picture/logo/LogoVer2.png" alt=""
         /></a>
@@ -89,33 +89,23 @@
           <!-- Slides -->
 
           <div class="swiper-slide" onclick="modal()">
-            <a target="" href="#"
-              ><img src="./picture/video-cover/video-2.png" alt=""
-            /></a>
+            <img src="./picture/video-cover/video-2.png" alt="" />
           </div>
 
           <div class="swiper-slide" onclick="modalSecond()">
-            <a target="" href="#"
-              ><img src="./picture/video-cover/video-3.png" alt=""
-            /></a>
+            <img src="./picture/video-cover/video-3.png" alt="" />
           </div>
 
           <div class="swiper-slide" onclick="modalThird()">
-            <a target="" href="#"
-              ><img src="./picture/video-cover/video-4.png" alt=""
-            /></a>
+            <img src="./picture/video-cover/video-4.png" alt="" />
           </div>
 
           <div class="swiper-slide" onclick="modalFive()">
-            <a target="" href="#"
-              ><img src="./picture/video-cover/video-5.png" alt=""
-            /></a>
+            <img src="./picture/video-cover/video-5.png" alt="" />
           </div>
 
           <div class="swiper-slide" onclick="modalFour()">
-            <a target="" href="#"
-              ><img src="./picture/video-cover/video-1.png" alt=""
-            /></a>
+            <img src="./picture/video-cover/video-1.png" alt="" />
           </div>
         </div>
         <!-- If we need pagination -->
@@ -135,27 +125,27 @@
         <div class="main">
           <img src="./picture/news/mario-export.png" alt="" />
           <br />
-          <h2>
+          <p>
             一番賞『超級瑪利歐兄弟電影版』確定 05 月開抽
             問號磚塊、超級蘑菇抱墊多種獎項登場！
-          </h2>
+          </p>
         </div>
 
         <div class="other">
           <div class="other-card">
             <img src="./picture/news/p2-cut.png" alt="" />
             <br />
-            <h3>
+            <p>
               人氣轉蛋商品『遭遇強風也不認輸』寶可夢版登場
               於寶可夢中心限定販售中！
-            </h3>
+            </p>
           </div>
           <div class="other-card">
             <img src="./picture/news/p1-cut.png" alt="" />
             <br />
-            <h3>
+            <p>
               T-ARTS轉蛋『靠肩Fig. 寶可夢』<br />第3彈帶來可達鴨、呆呆獸、沼王等超可愛寶可夢！
-            </h3>
+            </p>
           </div>
           <div class="more">
             <a href="news.html">MORE NEWS</a>
@@ -217,8 +207,7 @@
         </div>
       </div>
     </section>
-    <br />
-    <br />
+
     <!-- 預購商品 -->
     <div class="preorder-title">PRE-ORDER 以下商品開放預購</div>
     <section class="preorder">
@@ -261,19 +250,19 @@
         <div class="pic">
           <a href="#"><img src="./picture/brand/MH.png" alt="" /></a>
         </div>
-        <h4>MegaHouse</h4>
+        <p>MegaHouse</p>
       </div>
       <div class="brand-card">
         <div class="pic">
           <a href="#"><img src="./picture/brand/GSC.png" alt="" /></a>
         </div>
-        <h4>GSC</h4>
+        <p>GSC</p>
       </div>
       <div class="brand-card">
         <div class="pic">
           <a href="#"><img src="./picture/brand/ALTER.png" alt="" /></a>
         </div>
-        <h4>ALTER</h4>
+        <p>ALTER</p>
       </div>
       <div class="brand-card">
         <div class="pic">
@@ -281,7 +270,7 @@
             ><img src="./picture/brand/rement_logo_343x343.png" alt=""
           /></a>
         </div>
-        <h4>Re-Ment</h4>
+        <p>Re-Ment</p>
       </div>
     </section>
     <!-- 本站商品 -->
@@ -299,7 +288,7 @@
             /></a>
           </div>
 
-          <h4>火影忍者 疾風傳 VIBRATION STARS 宇智波佐助&地達羅</h4>
+          <p>火影忍者 疾風傳 VIBRATION STARS 宇智波佐助&地達羅</p>
           <div class="price">
             <p>$760</p>
             <button>加入購物車</button>
@@ -312,7 +301,7 @@
             /></a>
           </div>
 
-          <h4>MH PETITRAMA DX 七龍珠 孫悟空 成長軌跡</h4>
+          <p>MH PETITRAMA DX 七龍珠 孫悟空 成長軌跡</p>
           <div class="price">
             <p>$1800</p>
             <button>加入購物車</button>
@@ -325,7 +314,7 @@
             /></a>
           </div>
 
-          <h4>Figure-rise 遊戲王 黑暗大法師艾克佐迪亞 增幅版</h4>
+          <p>Figure-rise 遊戲王 黑暗大法師艾克佐迪亞 增幅版</p>
           <div class="price">
             <p>$1080</p>
             <button>加入購物車</button>
@@ -338,7 +327,7 @@
             /></a>
           </div>
 
-          <h4>Max Factory 船長 寶鐘瑪琳</h4>
+          <p>Max Factory 船長 寶鐘瑪琳</p>
           <div class="price">
             <p>$4800</p>
             <button>加入購物車</button>
@@ -353,7 +342,7 @@
             /></a>
           </div>
 
-          <h4>T-art 鬼滅之刃 轉蛋系列</h4>
+          <p>T-art 鬼滅之刃 轉蛋系列</p>
           <div class="price">
             <p>$999</p>
             <button>加入購物車</button>
@@ -366,7 +355,7 @@
             /></a>
           </div>
 
-          <h4>GSC SEGA 鏈鋸人 淀治</h4>
+          <p>GSC SEGA 鏈鋸人 淀治</p>
           <div class="price">
             <p>$4980</p>
             <button>加入購物車</button>
@@ -379,7 +368,7 @@
             /></a>
           </div>
 
-          <h4>PROOF 鋼之鍊金術師 愛力克兄弟套組</h4>
+          <p>PROOF 鋼之鍊金術師 愛力克兄弟套組</p>
           <div class="price">
             <p>$7900</p>
             <button>加入購物車</button>
@@ -392,7 +381,7 @@
             /></a>
           </div>
 
-          <h4>Re-Ment 星之卡比盒玩 肚子餓了 卡比廚房</h4>
+          <p>Re-Ment 星之卡比盒玩 肚子餓了 卡比廚房</p>
           <div class="price">
             <p>$1200</p>
             <button>加入購物車</button>
@@ -407,7 +396,7 @@
             /></a>
           </div>
 
-          <h4>MH GEM 海賊王 大和 小時候 RUN!</h4>
+          <p>MH GEM 海賊王 大和 小時候 RUN!</p>
           <div class="price">
             <p>$1350</p>
             <button>加入購物車</button>
@@ -420,7 +409,7 @@
             /></a>
           </div>
 
-          <h4>角川 Fate HF 黑化Saber 和服ver</h4>
+          <p>角川 Fate HF 黑化Saber 和服ver</p>
           <div class="price">
             <p>$4500</p>
             <button>加入購物車</button>
@@ -433,7 +422,7 @@
             /></a>
           </div>
 
-          <h4>BANDAI 魔法少年賈修 轉蛋系列</h4>
+          <p>BANDAI 魔法少年賈修 轉蛋系列</p>
           <div class="price">
             <p>$999</p>
             <button>加入購物車</button>
@@ -446,7 +435,7 @@
             /></a>
           </div>
 
-          <h4>BellFine 魔導少年最終章 艾爾莎．史卡雷特</h4>
+          <p>BellFine 魔導少年最終章 艾爾莎．史卡雷特</p>
           <div class="price">
             <p>$4880</p>
             <button>加入購物車</button>
@@ -456,7 +445,9 @@
     </section>
 
     <div class="film">
-      <button class="close-btn" onclick="closeBtn()">關閉</button>
+      <button class="close-btn" onclick="closeBtn()">
+        <i class="fa-sharp fa-solid fa-xmark"></i>
+      </button>
       <iframe
         width="560"
         height="315"
@@ -469,7 +460,9 @@
     </div>
 
     <div class="film2">
-      <button class="close-btn" onclick="closeBtn2()">關閉</button>
+      <button class="close-btn" onclick="closeBtn2()">
+        <i class="fa-sharp fa-solid fa-xmark"></i>
+      </button>
       <iframe
         width="560"
         height="315"
@@ -482,7 +475,9 @@
     </div>
 
     <div class="film3">
-      <button class="close-btn" onclick="closeBtn3()">關閉</button>
+      <button class="close-btn" onclick="closeBtn3()">
+        <i class="fa-sharp fa-solid fa-xmark"></i>
+      </button>
       <iframe
         width="560"
         height="315"
@@ -495,7 +490,9 @@
     </div>
 
     <div class="film4">
-      <button class="close-btn" onclick="closeBtn4()">關閉</button>
+      <button class="close-btn" onclick="closeBtn4()">
+        <i class="fa-sharp fa-solid fa-xmark"></i>
+      </button>
       <iframe
         width="560"
         height="315"
@@ -508,7 +505,9 @@
     </div>
 
     <div class="film5">
-      <button class="close-btn" onclick="closeBtn5()">關閉</button>
+      <button class="close-btn" onclick="closeBtn5()">
+        <i class="fa-sharp fa-solid fa-xmark"></i>
+      </button>
       <iframe
         width="560"
         height="315"
