article & products & item still no align

--- a/about.html
+++ b/about.html
@@ -19,9 +19,9 @@
     <link rel="stylesheet" href="./about.css" />
   </head>
   <body>
-    <!-- 導航列 -->
+    <!-- 導覽列 -->
     <header>
-      <section>
+      <section class="logo">
         <a href="index.html"
           ><img class="logo" src="./picture/logo/LogoVer2.png" alt=""
         /></a>
