--- a/item.html
+++ b/item.html
@@ -21,7 +21,7 @@
   <body>
     <!-- 導航列 -->
     <header>
-      <section>
+      <section class="logo">
         <a href="index.html"
           ><img class="logo" src="./picture/logo/LogoVer2.png" alt=""
         /></a>
