--- a/news.html
+++ b/news.html
@@ -19,8 +19,9 @@
     <link rel="stylesheet" href="./news.css" />
   </head>
   <body>
+    <!-- 導航列 -->
     <header>
-      <section>
+      <section class="logo">
         <a href="index.html"
           ><img class="logo" src="./picture/logo/LogoVer2.png" alt=""
         /></a>
