--- a/products.html
+++ b/products.html
@@ -21,7 +21,7 @@
   <body>
     <!-- 導航列 -->
     <header>
-      <section>
+      <section class="logo">
         <a href="index.html"
           ><img class="logo" src="./picture/logo/LogoVer2.png" alt=""
         /></a>
@@ -70,6 +70,7 @@
         </nav>
       </section>
     </header>
+
     <!-- 商品區 -->
     <section>
       <!-- 分類list -->
