--- a/news.html
+++ b/news.html
@@ -88,8 +88,7 @@
             <p>
               劇中登場的假面騎士ZERO-TWO是男女主角飛電或人、伊茲運用飛電
               ZERO-TWO 驅動器與 ZERO-TWO
-              數據鑰匙變身而成的假面騎士，所有蝗蟲系統能力之集大成，不僅活用飛電金屬、量子技術使整體性能大幅提升，更與具備高度運算能力的人工智慧傑亞合而為一，除了能夠
-              ...
+              數據鑰匙變身而成的假面騎士，所有蝗蟲系統能力之集大成，不僅活用飛電金屬、量子技術使整體性能大幅提升...
             </p>
           </div>
         </div>
@@ -132,8 +131,7 @@
               此次的「一番賞 七龍珠
               激突!!賭上宇宙的戰鬥」以經典的對戰組合為主題，推出 A ~ H 賞 +
               最後賞等不同級別的獎品，目前公開了兩組對戰組合角色模型，每款都是造型極為精緻的「MASTERLISE」系列模型，細膩再現壯碩的肌肉線條和服裝紋路！分別有
-              A 賞「孫悟飯」vs.B賞「達普拉」；C賞的「魔人普烏」vs.
-              D賞「孫悟空」；和附屬有替換頭雕的最後一賞「賽亞超人」！另外還有更多精彩的周邊商品，將於後續公開～...
+              ...
             </p>
           </div>
         </div>
@@ -176,9 +174,7 @@
             <p>
               在好評的「航海王 Emotional Stories」後，本次的第二彈「一番賞
               航海王 Emotional Stories 2」將帶來更多滿滿的回憶！收錄有「Revible
-              Moment」系列的 A賞「娜美&虹子&貝爾梅爾」、B賞「喬巴&西爾爾克」、
-              C賞「日和&御田」、D賞「蕾貝卡&單腳士兵」等精彩的角色模型組和，情懷爆棚！另外還有手提袋、馬克杯與壓克力牌、資料夾等豐富的周邊商品！
-              ...
+              Moment」系列的 A賞「娜美&虹子&貝爾梅爾」、B賞「喬巴&西爾爾克」 ...
             </p>
           </div>
         </div>
@@ -197,8 +193,7 @@
             </h2>
             <p>
               T-ARTS《寶可夢》主題的「場景收藏」是在 4.5～5.5
-              公分的尺寸當中以攻擊時的躍動姿態將各種屬性的寶可夢立體化，並加上同規格的可拼接底座、對應各屬性的攻擊特效，在迷你尺寸當中把玩出寶可夢們可愛又強力的激戰場面；不同於前兩彈主打屬性對戰，這次
-              T-ARTS 趁著《寶可夢 地平線》開播的熱潮 ...
+              公分的尺寸當中以攻擊時的躍動姿態將各種屬性的寶可夢立體化，並加上同規格的可拼接底座、對應各屬性的攻擊特效，在迷你尺寸當中把玩出寶可夢們可愛又強力的激戰場面；不同於前兩彈主打屬性對戰...
             </p>
           </div>
         </div>
@@ -219,9 +214,7 @@
             <p>
               最新款「噗噗噗風新生活☆」這次要以《星之卡比》中擁有高人氣的主角卡比以及可愛的主要敵人瓦豆魯迪為主，融入遊戲元素推出各式各樣可愛又實用的生活週邊，其中最大的
               A 賞是直徑達 32
-              公分的圓滾滾卡比布偶，腳底製作出從此次商品標題的刺繡，感覺抱起來超舒服！B
-              賞則是把 UFO
-              卡比吸起瓦豆魯迪的場景製作成小夜燈，讓瓦豆魯迪露出很困擾的表情，這個也是超欠抽！
+              公分的圓滾滾卡比布偶，腳底製作出從此次商品標題的刺繡，感覺抱起來超舒服
               ...
             </p>
           </div>
@@ -242,7 +235,7 @@
             </h2>
             <p>
               今天我們玩具人編輯部要帶來 Panasonic Battery
-              與《機動戰士鋼彈》重磅聯名的活動！除了這次的主角「鹼性電池」與「充電電池」之外，還有一系列的鋼彈主題贈品，像是以《機動戰士鋼彈》為題打造的工具箱、野餐墊、咖啡杯......等
+              與《機動戰士鋼彈》重磅聯名的活動！除了這次的主角「鹼性電池」與「充電電池」之外，還有一系列的鋼彈主題贈品，像是以《機動戰士鋼彈》為題打造的工具箱、野餐墊、咖啡杯...
             </p>
           </div>
         </div>
@@ -257,7 +250,7 @@
       <div class="page-other"><a href="#">5</a></div>
       <div class="page-other">...</div>
       <div class="page-other"><a href="#">8</a></div>
-      <div class="page-next"><a href="#">下一頁></a></div>
+      <div class="page-next"><a href="#">下一頁</a></div>
     </div>
 
     <footer>
