--- a/article.html
+++ b/article.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./article.css" />
   </head>
   <body>
-    <!-- 導覽列 -->
+    <!-- 導航列 -->
     <header>
       <section class="logo">
         <a href="index.html"
@@ -79,7 +79,7 @@
       </h1>
     </div>
 
-    <section>
+    <section class="content">
       <!-- 內容 -->
       <div class="main">
         <p>
@@ -199,7 +199,7 @@
       </div>
     </section>
     <div class="prev">
-      <a href="news.html" class="">返回最新消息</a>
+      <a href="news.html">返回最新消息</a>
     </div>
     <!-- 頁腳 -->
     <footer>
