--- a/products.html
+++ b/products.html
@@ -72,7 +72,7 @@
     </header>
 
     <!-- 商品區 -->
-    <section>
+    <section class="all-product">
       <!-- 分類list -->
       <div class="list">
         <ul>
@@ -399,7 +399,7 @@
           <div class="page-other"><a href="#">5</a></div>
           <div class="page-other">...</div>
           <div class="page-other"><a href="#">8</a></div>
-          <div class="page-next"><a href="#">下一頁></a></div>
+          <div class="page-next"><a href="#">下一頁</a></div>
         </div>
       </div>
     </section>
