--- a/index.html
+++ b/index.html
@@ -603,6 +603,9 @@
       </div>
     </footer>
 
+    <div class="scroll-to-top">
+      <img src="./picture/icon/up-arrow.png" alt="" />
+    </div>
     <!-- swiper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="./app.js"></script>
