--- a/products.html
+++ b/products.html
@@ -483,6 +483,10 @@
       </div>
     </footer>
 
+    <div class="scroll-to-top">
+      <img src="./picture/icon/up-arrow.png" alt="" />
+    </div>
+
     <script src="./products.js"></script>
   </body>
 </html>
