--- a/news.html
+++ b/news.html
@@ -325,6 +325,10 @@
       </div>
     </footer>
 
+    <div class="scroll-to-top">
+      <img src="./picture/icon/up-arrow.png" alt="" />
+    </div>
+
     <script>
       // click menu 漢堡 事件
       let menu = document.querySelector(".menu");
@@ -343,15 +347,27 @@
         rwdSearch.classList.toggle("open");
       };
 
+      // 捲動至頁頂
+      let toTop = document.querySelector(".scroll-to-top");
+      toTop.onclick = () => {
+        window.scrollTo({
+          top: 0,
+          behavior: "smooth",
+        });
+      };
+
       // 在415px以下捲動視窗，logo可以消失
       let logo = document.querySelector("img.logo");
 
       window.addEventListener("scroll", () => {
         if (window.matchMedia("(max-width: 415px)").matches) {
           if (window.scrollY >= 550) {
-            logo.style.display = "none";
+            logo.classList.add("slideup");
+            toTop.style.display = "block";
           } else {
-            logo.style.display = "block";
+            logo.classList.remove("slideup");
+
+            toTop.style.display = "none";
           }
         }
       });
