--- a/item.html
+++ b/item.html
@@ -184,7 +184,7 @@
 
             <div class="btns">
               <button class="minus" disabled>-</button>
-              <input class="count" type="tel" value="1" />
+              <input class="count" type="tel" value="1" readonly />
               <button class="plus">+</button>
               <br />
             </div>
